--- a/сss/styles.css
+++ b/сss/styles.css
@@ -564,6 +564,10 @@ button:focus {
   padding-bottom: 60px;
 }
 
+.logo-address {
+  margin-right: 69px;
+}
+
 .footer {
   background-color: #2f303a;
 }
@@ -577,9 +581,12 @@ button:focus {
 }
 
 .address-footer {
+  padding-top: 20px;
   color: rgba(255, 255, 255, 0.6);
   font-style: inherit;
-  line-height: 1.7;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  /*min-width: 231px;*/
 }
 
 .social-network-list-footer {
@@ -587,7 +594,7 @@ button:focus {
   padding-left: 0px;
   justify-content: center;
   align-items: center;
-  margin-top: 32px;
+  margin-top: 20px;
 }
 
 .social-network-list-footer .item + .item {
@@ -618,35 +625,57 @@ button:focus {
 
 .join-conteiner {
   padding-top: 12px;
-  margin-left: 69px;
+  margin-right: 94px;
 }
 
 .join {
-  /*
-  padding-left: 69px;*/
   color: var(--primary-white-color);
   text-transform: uppercase;
-  font-weight: bold;
+  letter-spacing: 0.03em;
+}
+
+.subscribe {
+  padding-bottom: 20px;
+  color: var(--primary-white-color);
+  text-transform: uppercase;
   letter-spacing: 0.03em;
 }
 
 .subscribe-conteiner {
-  display: flex;
-  flex-wrap: wrap;
   padding-top: 12px;
-  margin-left: 94px;
+}
+
+/*Форма*/
+
+.form-subscribe {
+  display: inline-flex;
+}
+
+.form-subscribe input {
+  margin-top: 20px;
+  padding: 16px 15px;
+  width: 358px;
+  height: 50px;
+  color: var(--primary-white-color);
+  font-size: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  background-color: #2f303a;
+  margin-right: 12px;
 }
 
 .button-subscribe {
   display: inline-flex;
+  width: 200px;
+  height: 50px;
+  margin-top: 20px;
   border-radius: 4px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 29px;
   padding-right: 28px;
   margin-left: auto;
-  /*align-self: center;
-  justify-content: center;*/
 
   color: var(--primary-white-color);
   border: var(--accent-color);
@@ -659,13 +688,6 @@ button:focus {
 
 .icon-send {
   margin-left: 10px;
-}
-
-.subscribe {
-  color: var(--primary-white-color);
-  text-transform: uppercase;
-  font-weight: bold;
-  letter-spacing: 0.03em;
 }
 
 /* Модальное окно*/
