--- a/сss/styles.css
+++ b/сss/styles.css
@@ -585,8 +585,6 @@ button:focus {
   color: rgba(255, 255, 255, 0.6);
   font-style: inherit;
   line-height: 1.71;
-  letter-spacing: 0.03em;
-  /*min-width: 231px;*/
 }
 
 .social-network-list-footer {
@@ -631,14 +629,12 @@ button:focus {
 .join {
   color: var(--primary-white-color);
   text-transform: uppercase;
-  letter-spacing: 0.03em;
 }
 
 .subscribe {
   padding-bottom: 20px;
   color: var(--primary-white-color);
   text-transform: uppercase;
-  letter-spacing: 0.03em;
 }
 
 .subscribe-conteiner {
@@ -720,14 +716,92 @@ button:focus {
 }
 
 .left-data {
-  padding-left: 40px;
-  padding: 40px 40px 30px;
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin: 40px 40px 30px;
   font-weight: bold;
   font-size: 20px;
   color: var(--title-text-color);
   line-height: 1.15;
+}
+
+.form {
+  margin: 0px 40px 40px;
+  width: 448px;
+}
+
+.form-field {
+  position: relative;
+  margin-bottom: 28px;
+}
+
+.form-label {
+  position: absolute;
+  top: 50%;
+  left: 40px;
+  transform: translateY(-50%);
+
+  transition: transform 250ms var(--timing-function);
+}
+
+.form-input {
+  width: 100%;
+  margin: 0;
+  padding: 12px 18px;
+  padding-left: 42px;
+  font: inherit;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  color: var(--accent-color);
+  transform: translateY(-40px);
+}
+
+.form-input:focus,
+textarea:focus {
+  outline: 1px solid var(--accent-color);
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+
+  transform: translateY(-50%);
+
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-color: tomato;
+}
+
+.form-input:focus ~ .icon {
+  background-color: blue;
+}
+
+textarea {
+  position: relative;
+  resize: none;
+  padding: 12px 16px;
+  font: inherit;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  width: 100%;
+  height: 120px;
+  margin-bottom: 20px;
+}
+
+.agree {
+  line-height: 1.71;
+  padding: 0px 0px 0px 36px;
+  margin-top: 0px;
+  margin-bottom: 30px;
+}
+
+.conditions {
+  color: var(--accent-color);
+  text-decoration: underline;
 }
 
 .button-sent {
