--- a/сss/styles.css
+++ b/сss/styles.css
@@ -690,6 +690,9 @@ button:focus {
 
 .backdrop {
   position: fixed;
+  transform: scale(1);
+  transition: opacity 250ms var(--timing-function);
+  opacity: 1;
   top: 0;
   left: 0;
   width: 100%;
@@ -700,6 +703,11 @@ button:focus {
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  transform: scale(0);
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0);
 }
 
 .modal {
@@ -709,14 +717,13 @@ button:focus {
 
   min-height: 581px;
   min-width: 528px;
-  transform: translate(-50%, -50%) scale(1);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
   background-color: var(--primary-white-color);
 
-  /*transform: translate(-50%, -50%);
-  transition: 250ms all var(--timing-function);
-  opacity: 1;*/
+  transform: translate(-50%, -50%) scale(1);
+
+  transition: transform 250ms var(--timing-function);
 }
 
 .left-data {
@@ -774,7 +781,7 @@ button:focus {
 textarea:focus + .form-label-comment,
 textarea:not(:placeholder-shown) + .form-label-comment {
   color: var(--accent-color);
-  transform: translate(-10px, -40px);
+  transform: translate(0px, -40px);
 }
 
 .form-input:focus,
