--- a/сss/styles.css
+++ b/сss/styles.css
@@ -790,7 +790,7 @@ textarea:focus {
   outline: none;
 }
 
-.icon {
+.icon-form {
   position: absolute;
   top: 50%;
   left: 19px;
@@ -818,7 +818,7 @@ textarea:focus {
   background: var(--primary-white-color);
 }
 
-.form-input:focus ~ .icon {
+.form-input:focus ~ .icon-form {
   fill: var(--accent-color);
 }
 
@@ -835,13 +835,20 @@ textarea {
 }
 
 .agree {
-  line-height: 1.71;
-  padding: 0px 0px 0px 12px;
-  margin-top: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   margin-bottom: 30px;
 }
 
+.agree-label {
+  display: flex;
+  align-items: center;
+}
+
 .conditions {
+  margin-left: 4px;
   color: var(--accent-color);
   text-decoration: underline;
 }
@@ -866,4 +873,37 @@ textarea {
   font-weight: bold;
   letter-spacing: 0.06em;
   cursor: pointer;
+}
+
+.icon-checkbox {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  background-color: red;
+  border: 2px solid var(--title-text-color);
+  border-radius: 4px;
+  background-color: var(--primary-white-color);
+}
+
+.checkbox:focus + .icon-checkbox {
+  border: 2px solid var(--accent-color);
+}
+
+.checkbox:checked + .icon-checkbox {
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+  background-image: url("../Images/svg/icon_check.svg ");
+  background-size: contain;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
