--- a/сss/styles.css
+++ b/сss/styles.css
@@ -432,7 +432,7 @@ button:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid 1px var(--accent-grey);
+  border: solid 1px var(--secondary-color);
   border-radius: 4px;
   width: 170px;
   height: 90px;
